--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,23 @@
-# Rediriger le http vers le https
+DirectoryIndex public/index.php public/index.html
+
 RewriteEngine on
 RewriteBase /
+
+# Redirect http to https
 RewriteCond %{SERVER_PORT} 80
-RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+#RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+
+# Redirect favicon.ico
+RewriteRule ^favicon\.ico$ /public/img/favicon.ico [NC,L,S=500]
+
+
+# Redirect  to public/index.php
+RewriteCond %{THE_REQUEST} /public/([^\s?]*) [NC]
+RewriteRule ^ %1 [L,NE,R=302]
+RewriteRule ^(.*)$ public/index.php?$1 [L,QSA]
+
+
+
 
 # PHP variables
 RewriteRule .* - [E=INFO_TIME:%{TIME},NE]
@@ -19,3 +34,4 @@ RewriteRule .* - [E=INFO_UNIQUE_ID:%{UNIQUE_ID},NE]
 # ErrorDocument 500 "<h1>Error 500</h1><div>Please contact the server administrator at dev.hboudaoud@gmail.com to inform them of the time this error occurred.<div>"
 # ErrorDocument 500 /cgi-bin/crash-recover
 ErrorDocument 500 https://hboudaoud.tk/public/errors/500.php
+
