--- a/.htaccess
+++ b/.htaccess
@@ -5,7 +5,7 @@ RewriteBase /
 
 # Redirect http to https
 RewriteCond %{SERVER_PORT} 80
-#RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
 # Redirect favicon.ico
 RewriteRule ^favicon\.ico$ /public/img/favicon.ico [NC,L,S=500]
