--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,5 @@ DB_PORT = 3306
 DB_NAME = test_db
 DB_PATH = sqlite_db/db_name.sqlite   # For sqlite database
 
-APP_ENV = dev # 'dev' or 'prod' environment
+# Environment mode 'dev' or 'prod', to display or not the compilation errors
+APP_ENV = dev
