Use Controllers class

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ DB_PATH = sqlite_db/db_name.sqlite   # For sqlite database
 
 # Environment mode 'dev' or 'prod', to display or not the compilation errors
 APP_ENV = dev
+# MVC design pattern
+APP_CONTROLLER = src/controllers/  # path of controllers folder
