Use AbstractController 'render' method to integrate the views into the layout

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,4 @@ DB_PATH = sqlite_db/db_name.sqlite   # For sqlite database
 APP_ENV = dev
 # MVC design pattern
 APP_CONTROLLER = src/controllers/  # path of controllers folder
+APP_VIEW = src/views/              # path of views folder
