--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ DB_NAME = test_db
 DB_PATH = sqlite_db/db_name.sqlite   # For sqlite database
 
 # Environment mode 'dev' or 'prod', to display or not the compilation errors
+APP_DEV_IP = 127.0.0.1, 192.168.1.11,192.168.1.255
 APP_ENV = dev
 # MVC design pattern
 APP_CONTROLLER = src/controllers/  # path of controllers folder
